--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -89,6 +89,7 @@
   align-items: center;
   justify-content: space-between;
   box-shadow: 0px 4px 2px 0px rgba(0, 0, 0, 0.15);
+  overflow: hidden;
 }
 
 .dashboard-card.green {
@@ -100,6 +101,7 @@
   align-items: center;
   height: 100%;
   width: 100%;
+  text-wrap: nowrap;
 }
 
 .dashboard-card-text.align-top {
@@ -120,7 +122,7 @@
 
 .dashboard-card-main.bolder {
   font-weight: 500;
-  font-size: 2.5rem;
+  font-size: 2.35rem;
 }
 
 .dashboard-card-main.smaller {
